# dpu-utilities

./: README.en.md  README.md
dpuos/image_tailor_cfg/: dpuos.md
qtfs/: CMakeLists.txt  README.en.md  README.md  comm.h  conn.c  conn.h  log.h  misc.c  qtsock.c  req.h  symbol_wrapper.c  symbol_wrapper.h
qtfs/config/qtfs/: whitelist
qtfs/config/rexec/: whitelist
qtfs/demo/: Makefile  cfifo_r.c  cfifo_w.c
qtfs/doc/: overview.md  qtfs共享文件系统架构及使用手册.md  容器管理面无感卸载.md  无感卸载部署指导.md
qtfs/include/: comm.h  conn.h  log.h  qtfs_check.h  req.h  symbol_wrapper.h
qtfs/ipc/: Makefile  uds_connector.c  uds_event.c  uds_event.h  uds_main.c  uds_main.h  uds_module.h
qtfs/qtfs/: Makefile  miss.c  ops.h  proc.c  qtfs-mod.c  qtfs-mod.h  sb.c  syscall.c  syscall.h  xattr.c
qtfs/qtfs_common/: conn.c  misc.c  qtfs_check.c  qtsock.c  socket.c  symbol_wrapper.c  user_engine.c
qtfs/qtfs_server/: Makefile  fsops.c  fsops.h  qtfs-server.c  qtfs-server.h  user_engine.c
qtfs/qtfs_server/qtfs_fifo_server/: Cargo.toml
qtfs/qtfs_server/qtfs_fifo_server/src/: cofifo.rs  main.rs
qtfs/qtinfo/: Makefile  qtinfo.c  qtinfo.h
qtfs/rexec/: Makefile  client.go  common.go  common_test.go  fd.go  go.mod  go.sum  rexec.c  rexec.h  rexec_server.c  rexec_shim.c  rexec_sock.c  rexec_sock.h  server.go
qtfs/rexec/rshim/: Makefile  rexec_shim.c
qtfs/test/: cgroup.go
qtfs/test/pjdfstest/: README.md
qtfs/test/qtfs_test/: test_fifo_block.sh  test_handle_open.rs
qtfs/test/rexec_test/: test_rexec_pipe_inherit.c  test_rexec_pipe_inherit_remote.c
qtfs/test/scmright_test/: README.md  client.c  makefile  scm_rights.c  server.c  uds.h
qtfs/utils/: qtfs_utils.h  utils.c
usecases/libvirtd-offload/: libvirt直连聚合环境从零搭建v1.1.md
usecases/libvirtd-offload/config/: rexec.service  whitelist
(+15 files in other folders)
